2008-04-10  Joe English  <jenglish@users.sourceforge.net

	* library/palette.tcl(tk_setPalette): Don't set 
	*selectColor: #b03060; this makes radio- and checkbuttons
	look wrong post-TIP#109.

2008-04-10  Daniel Steffen  <das@users.sourceforge.net>

	* library/msgbox.tcl: don't set msgbox bitmap background on TkAqua.

	* library/demos/filebox.tcl: only show "Motif Style Dialog" checkbutton
	on X11 windowingsystem.

	* library/demos/widget: GOOBE: use ttk::cursor

	* library/ttk/cursors.tcl: backport ttk::cursor from HEAD

	* library/demos/knightstour.tcl: fix knightstour demo not running from
	interactive wish.

	* library/console.tcl (::tk::ConsoleInit): remove redundant TkAqua
	Quit menu item.

	* generic/tkPointer.c (Tk_UpdatePointer): use all 5 buttons.

	* generic/tkMenu.c (PostProcessEntry): delay call to
	TkpConfigureMenuEntry() until all menu entry attributes are setup.

	* library/menu.tcl (::tk::MbPost): fix error thrown in y position
	computation with indicatoron.

	* generic/tkMenubutton.c: s/DEF_BUTTON_JUSTIFY/DEF_MENUBUTTON_JUSTIFY/

	* generic/tkBind.c (HandleEventGenerate): ensure window exists before
	generating an event for it (fixes testsuite crash).

	* generic/tkTextBTree.c (TkBTreeDeleteIndexRange): add bounds check
	to startEnd array access (fixes testsuite crash).

	* tests/unixFont.test: only use xlsfonts with X11 windowingsystem.

2009-04-10  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkCanvPs.c (TkPostscriptInfo): [Bug 1466509]: Eliminate old
	and misleading comments mentioning prolog.ps.
	* generic/prolog.ps, library/prolog.ps: Remove unused files.
	* unix/Makefile.in, win/Makefile.in: Stop building distributions that
	include the removed files or trying to install them.

	* library/tk.tcl: [Bug 2116837]: Add event definitions to handle the
	standard virtual events when Caps Lock is on.

2009-04-03  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixWm.c: [Bug 1789819]: Don't Panic.
